--- a/view/uthando-events/events/list.phtml
+++ b/view/uthando-events/events/list.phtml
@@ -7,7 +7,7 @@
                 <th data-field="eventsId">Id</th>
                 <th data-field="titel">Title</th>
                 <th data-field="description">Description</th>
-                <th data-field="dateTime">Date</th>
+                <th data-field="dateTime">Date/Time</th>
                 <th>Actions</th>
             </tr>
             </thead>
@@ -19,7 +19,7 @@
                     <td><?=$this->escapeHtml($row->getEventId()); ?></td>
                     <td><?=$this->escapeHtml($row->getTitle()); ?></td>
                     <td><?=$this->escapeHtml($row->getDescription()); ?></td>
-                    <td><?=$this->escapeHtml($row->getDateTime()->format('Y/m/d H:m:i')); ?></td>
+                    <td><?=$this->escapeHtml($row->getDateTime()->format('d/m/Y H:i A')); ?></td>
                     <td>
                         <?=$this->partial('uthando-admin/partial/edit-actions', [
                             'pk'		=> 'eventId',
