--- a/view/uthando-events/settings/index.phtml
+++ b/view/uthando-events/settings/index.phtml
@@ -1,1 +1,8 @@
-<h1>Events Settings</h1>
+<?php $this->HeadTitle('Events Settings'); ?>
+<?php $this->layout()->pageTitle = 'Events Settings'; ?>
+
+<?=$this->form($this->form);?>
+
+<div class="clearfix"></div>
+
+
