--- a/view/uthando-events/events/edit.phtml
+++ b/view/uthando-events/events/edit.phtml
@@ -13,43 +13,12 @@
     ],
 ]); ?>
 
-<?=$this->inlineScript()
-    ->appendFile('//cdn.tinymce.com/4/tinymce.min.js');
-?>
+<?=$this->partial('uthando-admin/partial/tiny-mce');?>
 
 <script type="text/javascript">
-    $(document).ready(function(){
+    $(document).ready(function() {
         $('.date-time-pick .input-group').datetimepicker({
-            format : 'DD/MM/YYYY h:mm A'
-            //format : 'YYYY-MM-DD h:mm:ss'
-        });
-
-        tinymce.init({
-            selector:'.tiny-mce-textarea',
-            relative_urls: false,
-            plugins: [
-                "advlist autolink lists link image charmap print preview hr anchor pagebreak",
-                "searchreplace wordcount visualblocks visualchars code fullscreen",
-                "insertdatetime media nonbreaking save table contextmenu directionality",
-                "emoticons template paste textcolor colorpicker textpattern"
-            ],
-            toolbar1: "insertfile undo redo | styleselect | fontsizeselect bold italic | alignleft aligncenter alignright alignjustify | bullist numlist outdent indent | link image",
-            toolbar2: "bootstrap print preview media | forecolor backcolor emoticons",
-            image_advtab: true,
-
-            bootstrapConfig: {
-                'imagesPath': '<?=$this->serverUrl($this->basePath('/userfiles'));?>/' // replace with your images folder path
-            },
-
-            external_plugins: {
-                "bootstrap": "<?=$this->basePath('/js/tinymce/plugins/bootstrap/plugin.js');?>"
-            }
-
-
-            //external_filemanager_path:"<?=$this->basePath('/filemanager');?>/",
-            //filemanager_title:"Responsive Filemanager" ,
-            //external_plugins: { "filemanager" : "<?=$this->basePath('/filemanager/plugin.min.js');?>"}
-
+            format: '<?=$this->convertDateFormat('js');?>'
         });
     });
 </script>
