--- a/view/uthando-events/events/list.phtml
+++ b/view/uthando-events/events/list.phtml
@@ -19,7 +19,7 @@
                     <td><?=$this->escapeHtml($row->getEventId()); ?></td>
                     <td><?=$this->escapeHtml($row->getTitle()); ?></td>
                     <td><?=$this->escapeHtml($row->getDescription()); ?></td>
-                    <td><?=$this->escapeHtml($row->getDateTime()->format('d/m/Y H:i A')); ?></td>
+                    <td><?=$this->escapeHtml($row->getDateTime()->format($this->eventsOptions('date_format'))); ?></td>
                     <td>
                         <?=$this->partial('uthando-admin/partial/edit-actions', [
                             'pk'		=> 'eventId',
