--- a/view/uthando-events/events/list.phtml
+++ b/view/uthando-events/events/list.phtml
@@ -5,7 +5,7 @@
             <thead>
             <tr>
                 <th data-field="eventsId">Id</th>
-                <th data-field="titel">Title</th>
+                <th data-field="title">Title</th>
                 <th data-field="description">Description</th>
                 <th data-field="dateTime">Date/Time</th>
                 <th>Actions</th>
