--- a/view/uthando-events/events/edit.phtml
+++ b/view/uthando-events/events/edit.phtml
@@ -1,24 +1,53 @@
 <?php $this->headTitle('Edit Event') ?>
-<?php $this->layout()->pageTitle = 'Edit Event'; ?>
+<?php $this->layout()->pageTitle = $this->translate('Edit Event');?>
 
-<?=$this->partial('uthando-admin/partial/add-edit-form', [
-    'form' 			=> $this->form,
-    'formName'		=> 'Event',
-    'postUrl'		=> $this->url('admin/events/edit', [
+<?php $this->placeholder('header-buttons')->captureStart();?>
+<button type="submit" form="form-event" data-toggle="tooltip" title="<?=$this->translate('Save');?>" class="btn btn-primary">
+    <i class="fa fa-save"></i>
+</button>
+<a href="<?=$this->url('admin/events');?>" data-toggle="tooltip" title="<?=$this->translate('Cancel');?>" class="btn btn-default">
+    <i class="fa fa-reply"></i>
+</a>
+<?php $this->placeholder('header-buttons')->captureEnd();?>
+
+<?php
+
+$this->form->setAttributes([
+    'method' => 'post',
+    'id' => 'form-event',
+    'action' => $this->url('admin/events/edit', [
+        'action' => 'edit',
         'id'    => $this->model->getEventId(),
     ]),
-    'cancelUrl'     => $this->url('admin/events'),
-    'formElements'	=> [
-        'eventId', 'title', 'dateTime', 'description', 'html',
-    ],
-]); ?>
+]);
 
-<?=$this->partial('uthando-admin/partial/tiny-mce');?>
+?>
+
+<div class="panel panel-default">
+    <div class="panel-heading">
+        <h3 class="panel-title"><i class="fa fa-pencil"></i> <?=$this->translate('Edit Event');?></h3>
+    </div>
+    <div class="panel-body">
+        <?=$this->form($this->form);?>
+    </div>
+</div>
 
 <script type="text/javascript">
-    $(document).ready(function() {
+    $(document).ready(function(){
         $('.date-time-pick .input-group').datetimepicker({
-            format: '<?=$this->convertDateFormat('js');?>'
+            format : '<?=$this->convertDateFormat('js');?>'
+        });
+
+        $('textarea.editable-textarea').summernote({
+            height: 300,
+            toolbar: [
+                ['style', ['style', 'bold', 'underline', 'clear']],
+                ['font', ['fontname', 'fontsize']],
+                ['para', ['ul', 'ol', 'paragraph']],
+                ['table', ['table']],
+                ['insert', ['link', 'picture']],
+                ['view', ['fullscreen', 'codeview', 'help']]
+            ]
         });
     });
 </script>
