--- a/view/uthando-events/settings/index.phtml
+++ b/view/uthando-events/settings/index.phtml
@@ -1,8 +1,28 @@
-<?php $this->HeadTitle('Events Settings'); ?>
-<?php $this->layout()->pageTitle = 'Events Settings'; ?>
+<?php $this->headtitle('Events Settings');?>
+<?php $this->layout()->pageTitle = $this->translate('Events Settings');?>
 
-<?=$this->form($this->form);?>
+<?php $this->placeholder('header-buttons')->captureStart();?>
+<button type="submit" form="form-events" data-toggle="tooltip" title="<?=$this->translate('Save');?>" class="btn btn-primary">
+    <i class="fa fa-save"></i>
+</button>
+<a href="<?=$this->url('admin/events');?>" type="submit" form="form-user" data-toggle="tooltip" title="<?=$this->translate('Cancel');?>" class="btn btn-default">
+    <i class="fa fa-reply"></i>
+</a>
+<?php $this->placeholder('header-buttons')->captureEnd();?>
 
-<div class="clearfix"></div>
+<?php $this->form->setAttributes([
+    'method' => 'post',
+    'id' => 'form-events',
+    'action' => $this->url('admin/events/settings'),
+]); ?>
+
+<div class="panel panel-default">
+    <div class="panel-heading">
+        <h3 class="panel-title"><i class="fa fa-cog"></i> <?=$this->translate('Events Settings');?></h3>
+    </div>
+    <div class="panel-body">
+        <?=$this->form($this->form);?>
+    </div>
+</div>
 
 
