update to render at bottom of page

--- a/view/uthando-events/events/add.phtml
+++ b/view/uthando-events/events/add.phtml
@@ -31,6 +31,6 @@ $this->form->setAttributes([
     </div>
 </div>
 
-<?=$this->datePicker($this->convertDateFormat('js'));?>
+<?php $this->datePicker($this->convertDateFormat('js'));?>
 
-<?=$this->textEditor()->summernote();?>
+<?php $this->textEditor()->summernote();?>
