--- a/view/uthando-events/events/edit.phtml
+++ b/view/uthando-events/events/edit.phtml
@@ -32,6 +32,6 @@ $this->form->setAttributes([
     </div>
 </div>
 
-<?=$this->datePicker($this->convertDateFormat('js'));?>
+<?php $this->datePicker($this->convertDateFormat('js'));?>
 
-<?=$this->textEditor()->summernote();?>
+<?php $this->textEditor()->summernote();?>
