--- a/view/uthando-events/events/index.phtml
+++ b/view/uthando-events/events/index.phtml
@@ -31,7 +31,7 @@
     </div>
 </div>
 
-
+<?php $this->placeholder('js-scripts')->captureStart();?>
 <script>
     $(document).ready(function(){
         $('#table-events').dataGrid({
@@ -44,3 +44,5 @@
         });
     });
 </script>
+<?php $this->placeholder('js-scripts')->captureEnd();?>
+
